apps/node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
        app.kubernetes.io/name: node-red
    spec:
      restartPolicy: Always
      hostAliases:
      - ip: 192.168.1.150
        hostnames:
        - 'homeassistant.local'
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccountName: node-red
      containers:
      - name: node-red
        image: 'docker.io/nodered/node-red:3.1.3'
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 1880
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 10003
          runAsNonRoot: true
          runAsUser: 10003
          seccompProfile:
            type: RuntimeDefault
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        volumeMounts:
          - name: node-red-pvc
            mountPath: /data
      volumes:
        - name: node-red-pvc
          persistentVolumeClaim:
            claimName: node-red
