apps/node-red/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.115
  externalTrafficPolicy: Cluster
