apps/node-red/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - node-red.bensonphillips.dev
      secretName: letsencrypt
  rules:
    - host: node-red.bensonphillips.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-red
                port:
                  name: "http"
---
apiVersion: v1
kind: Service
metadata:
  name: node-red-tailscale
  labels:
    app: node-red
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/tags: "tag:k8s"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: node-red
    app.kubernetes.io/name: node-red
  ports:
    - port: 80
      targetPort: 1880
      protocol: TCP
      name: http
---
